[wrapper-tracing] WebGLRenderingContextBase: Fix wrapper tracing

BUG=671942
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2560473005
Cr-Commit-Position: refs/heads/master@{#436919}