third_party/WebKit/Source/modules/webgl/WebGLRenderingContextBase.cpp
@@ -7677,9 +7677,7 @@ DEFINE_TRACE(WebGLRenderingContextBase) {
 }
 
 DEFINE_TRACE_WRAPPERS(WebGLRenderingContextBase) {
-  if (isContextLost()) {
-    return;
-  }
+  visitor->traceWrappers(m_contextGroup);
   visitor->traceWrappers(m_boundArrayBuffer);
   visitor->traceWrappers(m_renderbufferBinding);
   visitor->traceWrappers(m_framebufferBinding);
